Issue#SB-21097 Need to hide Scrollbar on right side

--- a/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
+++ b/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
@@ -7,7 +7,7 @@
 
     iframe {
         width: 100%;
-        height: 100%;
+        height: 100vh;
         border: 0;
     }
 
